porfite image and animation

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first ever github repo</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="box">
+        <div class="content">
+            <img src="sohel.jpg" alt="profile-image">
+            <h2>Sohel Dewan <br> <span>Web Dev</span></h2>
+            <a href="#">Hire Me</a>
+        </div>
+    </div>
 </body>
 </html>
